; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_devices_set_loader.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_devices_set_loader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_hwdec_devices = type { void (i8*)*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hwdec_devices_set_loader(%struct.mp_hwdec_devices* %0, void (i8*)* %1, i8* %2) #0 {
  %4 = alloca %struct.mp_hwdec_devices*, align 8
  %5 = alloca void (i8*)*, align 8
  %6 = alloca i8*, align 8
  store %struct.mp_hwdec_devices* %0, %struct.mp_hwdec_devices** %4, align 8
  store void (i8*)* %1, void (i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load void (i8*)*, void (i8*)** %5, align 8
  %8 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %4, align 8
  %9 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %8, i32 0, i32 0
  store void (i8*)* %7, void (i8*)** %9, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %4, align 8
  %12 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
